Fixed my compiler errors in the ParallelBFSJob Files. Also, Finished the ParallelBFS Job files. Added them to the Common Launcher. Moment of truth where I test them out comes up when I get back